test/asm/character-escapes.err
error: character-escapes.asm(10) -> character-escapes.asm::m(6):
    Illegal character escape 'z'
error: character-escapes.asm(10) -> character-escapes.asm::m(7):
    Invalid character in bracketed macro argument '\'
error: character-escapes.asm(10) -> character-escapes.asm::m(8):
    Invalid character in bracketed macro argument '\t'
Assembly aborted with 3 errors!
